# scheduler

./: README.md  pyproject.toml
.github/workflows/: tests.yml
examples/: threadpool_demo.py
src/schedcore/: scheduler.py
src/scheduler/: scheduler.py  threadPool.py
tests/: test_threadpool.py
